// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template components renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
>
  <div
    className="css-fd96ed"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-1q0thn5"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Content Top
    </div>
  </div>
  <div
    className="css-s7bsmx"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Left Sidebar
    </div>
  </div>
  <main
    className="css-n7iznt"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main Content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More Content
    </div>
  </main>
  <div
    className="css-1yhc1wu"
  >
    <div
      className="placeholder placeholder--short"
    >
      Content Bottom
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
>
  <div
    className="css-fd96ed"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-1q0thn5"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Content Top
    </div>
  </div>
  <main
    className="css-n7iznt"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main Content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More Content
    </div>
  </main>
  <div
    className="css-s7bsmx"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Right Sidebar
    </div>
  </div>
  <div
    className="css-1yhc1wu"
  >
    <div
      className="placeholder placeholder--short"
    >
      Content Bottom
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
>
  <div
    className="css-fd96ed"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-1q0thn5"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Content Top
    </div>
  </div>
  <main
    className="css-n7iznt"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main Content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More Content
    </div>
  </main>
  <div
    className="css-1yhc1wu"
  >
    <div
      className="placeholder placeholder--short"
    >
      Content Bottom
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
>
  <div
    className="css-fd96ed"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-1q0thn5"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Content Top
    </div>
  </div>
  <main
    className="css-n7iznt"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main Content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More Content
    </div>
  </main>
  <div
    className="css-1yhc1wu"
  >
    <div
      className="placeholder placeholder--short"
    >
      Content Bottom
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
>
  <main
    className="css-n7iznt"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main Content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More Content
    </div>
  </main>
</div>
`;

exports[`Template components renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
>
  <main
    className="css-n7iznt"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main Content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More Content
    </div>
  </main>
</div>
`;
